# gruene-cms

./: .gitmodules  README.md  gruene_venv.code-workspace  pyproject.toml
docs/: setup.md
external_repos/: README.md
gruene/: __init__.py
gruene/templates/: gruene_v1.html
gruene_cms/: admin.py  backends.py  cms_apps.py  cms_plugins.py  forms.py  models.py  storage.py
gruene_cms/migrations/: 0001_initial.py  0002_datasource_json_attr_datasource_value_convert_and_more.py  0003_alter_aggregateddata_agg_method_and_more.py  0004_gruenecmsanimatetypingnode_and_more.py  0005_limitusergroupnode.py  0006_loginformnode_chartjsnode.py  0007_calendar_calendaritem_calendarnode.py  0008_remove_calendarnode_calendar_calendarnode_calendars_and_more.py  0009_calendarnode_render_template.py  0010_category_newsitem_newslistnode.py  0011_editoranimatetypingnode.py  0012_remove_editoranimatetypingnode_body_and_more.py  0013_remove_gruenecmsanimatetypingnode_post_text_and_more.py  0014_newsitem_attachments.py  0015_remove_newsitem_attachments_newsitem_insert_images_and_more.py  0016_newsitem_content_rendered.py  0017_newslistnode_news_page.py  0018_chartjsnode_dataset_history_hours.py  0019_gruenecmsimagebackgroundnode_background_pos_x_and_more.py  0020_newsitem_newsfeedreader_external_link_newsfeedreader_and_more.py  0021_newslistnode_title_h.py  0022_category_logo.py  0023_newspageconfig.py  0024_alter_calendarnode_render_template.py  0025_calendaritem_full_day_calendaritem_linked_news_and_more.py  0026_newslistnode_extra_col_classes_and_more.py  0027_taskitem_taskcomment_tasknode.py  0028_taskitem_priority.py  0029_tasknode_include_obsolete.py  0030_alter_taskitem_assigned_to_users_and_more.py  0031_alter_webdavclient_local_path_foldernode.py  (+34 more)
(+60 files in other folders)
