[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gruene"
version = "0.0.1"
authors = [
  { name="Christian Karrié", email="ckarrie@gmail.com" },
]
description = "Cherrypicking the best out of WordPress and TYPO3 designs by https://verdigado.com/"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ckarrie/gruene-cms"
Issues = "https://github.com/ckarrie/gruene-cms/issues"
