[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gruene"
version = "0.0.7"
authors = [
  { name="Christian Karrié", email="ckarrie@gmail.com" },
]
description = "Cherrypicking the best out of WordPress and TYPO3 designs by https://verdigado.com/"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests',
  'feedparser',
  'django-bootstrap5',
  'webdavclient3',
  'django-markdownify',
  'pygments',
  'odfpy',
  'beautifulsoup4',
  'icalendar',
  'vobject',
  'metadata_parser'
]

[tool.setuptools.packages.find]
include = ["gruene_cms*"]  # Only include your main package
exclude = ["external_repos*"] # Specifically ignore the other one

[project.urls]
Homepage = "https://github.com/ckarrie/gruene-cms"
Issues = "https://github.com/ckarrie/gruene-cms/issues"
